--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ search_exclude: true
 image: images/logo.png
 ---
 
+Adding some text.
+
 This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
 ![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
