--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>Adding some text.</p>
+
+<p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
 
 <p><img src="/blog/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
 
