More trivial changes to redeploy.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 
-Adding some text.
+Adding some text. And more.
 
 This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
 
