deploy: b15ac6672468cef6ec53f87b79afd256a711e35d

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Adding some text.</p>
+        <div class="home"><p>Adding some text. And more.</p>
 
 <p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
 
