deploy: 20e317355bde404aaae3293d11b7a4373aa8e5f4

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://blog.mattbowers.dev/404.html" />
 <meta property="og:site_name" content="Random Realizations" />
 <script type="application/ld+json">
-{"description":"A blog about data science, statistics, machine learning, and the scientific method.","url":"https://blog.mattbowers.dev/404.html","@type":"WebPage","headline":"Random Realizations","@context":"https://schema.org"}</script>
+{"url":"https://blog.mattbowers.dev/404.html","@type":"WebPage","headline":"Random Realizations","description":"A blog about data science, statistics, machine learning, and the scientific method.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://blog.mattbowers.dev/feed.xml" title="Random Realizations" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
