Convert photo images to smaller jpgs

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: home
 search_exclude: true
-image: images/matt_hello_world_wide.png
+image: images/matt_hello_world_wide.jpg
 ---
 
-![]({{ site.baseurl }}/images/matt_hello_world_wide.png " ")
+![]({{ site.baseurl }}/images/matt_hello_world_wide.jpg "Matt raises his arms, greeting the universe with wonder and love")
 
 
 # Posts
