--- a/gradient-boosting-machine-from-scratch.html
+++ b/gradient-boosting-machine-from-scratch.html
@@ -144,7 +144,7 @@ window.onload = wrap_img;
         
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="/images/copied_from_nb/nb_images/gbm_bay.png" alt="" title="SF from Angel Island" /></p>
+<p><img src="/images/copied_from_nb/nb_images/gbm_bay.jpg" alt="" title="SF from Angel Island" /></p>
 
 </div>
 </div>
