--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link rel="canonical" href="https://blog.mattbowers.dev/" />
 <meta property="og:url" content="https://blog.mattbowers.dev/" />
 <meta property="og:site_name" content="Random Realizations" />
-<meta property="og:image" content="https://blog.mattbowers.dev/images/matt_hello_world_wide.png" />
+<meta property="og:image" content="https://blog.mattbowers.dev/images/matt_hello_world_wide.jpg" />
 <script type="application/ld+json">
-{"url":"https://blog.mattbowers.dev/","@type":"WebSite","headline":"Random Realizations","image":"https://blog.mattbowers.dev/images/matt_hello_world_wide.png","name":"Random Realizations","description":"A blog about data science, statistics, machine learning, and the scientific method.","@context":"https://schema.org"}</script>
+{"url":"https://blog.mattbowers.dev/","@type":"WebSite","headline":"Random Realizations","image":"https://blog.mattbowers.dev/images/matt_hello_world_wide.jpg","name":"Random Realizations","description":"A blog about data science, statistics, machine learning, and the scientific method.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://blog.mattbowers.dev/feed.xml" title="Random Realizations" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -89,7 +89,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="/images/matt_hello_world_wide.png" alt="" title=" " /></p>
+        <div class="home"><p><img src="/images/matt_hello_world_wide.jpg" alt="" title="Matt raises his arms, greeting the universe with wonder and love" /></p>
 
 <h1 id="posts">Posts</h1>
 
