deploy: ee468a9d5f4bff2e68ee6835ee0ff88567d9528e

--- a/about/index.html
+++ b/about/index.html
@@ -107,7 +107,7 @@ window.onload = wrap_img;
   </div>
 </div>
 
-<p><img align="center" src="/images/matt_circle.png" alt="Matt" width="250" /></p>
+<p><img align="center" src="/images/matt_circle.jpg" alt="Matt" width="250" /></p>
 
 <p>Well howdy!
 I’m Matt Bowers.
