deploy: f16c1bfd5b88b404e0262c5033d334ec33ccb0a1

--- a/gradient-boosting-machine-from-scratch.html
+++ b/gradient-boosting-machine-from-scratch.html
@@ -482,9 +482,10 @@ $$F_{m}(x) = F_{m-1}(x) + \eta h_m(x),$$
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-$$
-F_M(x) = F_0(x) + \eta \sum_{m = 1}^{M} h_m(x})
-$$
+<p>
+$$F_M(x) = F_0(x) + \eta \sum_{m = 1}^{M} h_m(x))$$
+</p>
+
 </div>
 </div>
 </div>
