--- a/gradient-boosting-machine-from-scratch.html
+++ b/gradient-boosting-machine-from-scratch.html
@@ -483,7 +483,7 @@ $$F_{m}(x) = F_{m-1}(x) + \eta h_m(x),$$
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>
-$$F_M(x) = F_0(x) + \eta \sum_{m = 1}^{M} h_m(x))$$
+$$F_M(x) = F_0(x) + \eta \sum_{m = 1}^{M} h_m(x)$$
 </p>
 
 </div>
