deploy: 69ff6bcaa6cfc969902e124b591d0725228bb4c8

--- a/8020-pandas-tutorial.html
+++ b/8020-pandas-tutorial.html
@@ -154,7 +154,7 @@ window.onload = wrap_img;
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Ahh, pandas. In addition to being everyone's favorite vegetarian bear from south central China, it's also <em>the</em> python library for working with tabular data, a.k.a. dataframes.
+<p>Ahh, pandas. In addition to being everyone's favorite mostly vegetarian bear from south central China, it's also <em>the</em> python library for working with tabular data, a.k.a. dataframes.
 When you dive into pandas, you'll quickly find out that there is a lot going on; indeed there are <a href="https://pandas.pydata.org/docs/reference/frame.html">hundreds</a> of methods for operating on dataframes. But luckily for us, as with many areas of life, there is a <a href="https://en.wikipedia.org/wiki/Pareto_principle">Pareto Principle</a>, or 80/20 rule, that will help us focus on the small set of methods that collectively solve the majority of our data transformation needs.</p>
 <p>If you're like me, then pandas is not your first data-handling tool; maybe you've been using SQL or R with <code>data.table</code> or <code>dplyr</code>. If so, that's great because you already have a sense for the key operations we need when working with tabular data. 
 In their book, <a href="https://r4ds.had.co.nz/">R for Data Science</a>, Garrett Grolemund and Hadley Wickham describe five essential operations for manipulating dataframes. I've found that these cover the majority of my data transformation tasks to prepare data for analysis, visualization, and modeling.</p>
