deploy: 6833e40cb56b11dbaeea33e9b71e429eae2717f6

--- a/hello-pyspark.html
+++ b/hello-pyspark.html
@@ -634,7 +634,7 @@ You can pass either a list of names, or pass names as arguments.</p>
 <h3 id="Filter-rows-based-on-column-values">Filter rows based on column values<a class="anchor-link" href="#Filter-rows-based-on-column-values"> </a>
 </h3>
 <p>Analogous to the <code>WHERE</code> clause in SQL, and the <code>query()</code> method in pandas, pyspark provides a <code>filter()</code> method which returns only the rows that meet the specified conditions.
-Its argument is a string specifying the condition to be met for rows to be included in the result. You specify the condition as an expression involving the column names and comparison operators like &lt;, &gt;, &lt;=, &gt;=, == (equal), and ~= (not equal). You can specify compound expressions using and and or, and you can even a SQL-like <code>in</code> to check if the column value matches any items in a list.</p>
+Its argument is a string specifying the condition to be met for rows to be included in the result. You specify the condition as an expression involving the column names and comparison operators like &lt;, &gt;, &lt;=, &gt;=, == (equal), and ~= (not equal). You can specify compound expressions using <code>and</code> and <code>or</code>, and you can even do a SQL-like <code>in</code> to check if the column value matches any items in a list.</p>
 
 </div>
 </div>
