--- a/hello-pyspark.html
+++ b/hello-pyspark.html
@@ -89,7 +89,7 @@ window.onload = wrap_img;
         </label>
 
         <div class="trigger">
-<a class="page-link" href="/about/">About Me</a><a class="page-link" href="/search/">Search</a><a class="page-link" href="/categories/">Tags</a>
+<a class="page-link" href="/about/">About</a><a class="page-link" href="/_pages/1-subscribe">Subscribe</a><a class="page-link" href="/categories/">Tags</a><a class="page-link" href="/search/">Search</a>
 </div>
       </nav>
 </div>
@@ -1092,7 +1092,7 @@ In the meantime, may no dataframe be too large for you ever again.</p>
           <a href="/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/assets/minima-social-icons.svg#rss"></use>
-            </svg><span>Subscribe</span>
+            </svg><span>RSS</span>
           </a>
         </p>
         <ul class="contact-list">
@@ -1107,6 +1107,7 @@ In the meantime, may no dataframe be too large for you ever again.</p>
     <div class="social-links">
 <ul class="social-media-list">
 <li><a rel="me" href="https://github.com/mcb00" target="_blank" title="mcb00"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a></li>
+<li><a rel="me" href="https://www.linkedin.com/in/matt-bowers" target="_blank" title="matt-bowers"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg></a></li>
 <li><a rel="me" href="https://twitter.com/mcbwrs" target="_blank" title="mcbwrs"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#twitter"></use></svg></a></li>
 </ul>
 </div>
