--- a/decision-tree-from-scratch.html
+++ b/decision-tree-from-scratch.html
@@ -152,8 +152,8 @@ window.onload = wrap_img;
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>I hope you enjoyed yesterday's <a href="https://blog.mattbowers.dev/consider-the-decision-tree">post</a>, a hand-wavy discussion about  the key strengths and weaknesses of decision trees and why tree ensembles are  such a good idea. 
-But today, gentle reader, we abandon our high-level fluffy philosophizing and get down to the business of implementing one of these decision trees from scratch.</p>
+<p>Yesterday we had a lovely discussion about  the key strengths and weaknesses of decision trees and why tree ensembles are  so great.
+But today, gentle reader, we abandon our philosophizing and get down to the business of implementing one of these decision trees from scratch.</p>
 <p>A note before we get started. This is going to be the most involved scratch-build that we've done at Random Realizations so far. It is not the kind of algorithm that I could just sit down and write all at once. We need to start with a basic frame and then add functionality step by step, testing all along the way to make sure things are working properly. Since I'm writing this in a jupyter notebook, I'll try to give you a sense for how I actually put the algorithm together interactively in pieces, eventually landing on a fully-functional final product.</p>
 <p>Shall we?</p>
 
