deploy: 7160c11c310e56259287443f57af49a419fb759f

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:site_name" content="Random Realizations" />
 <meta property="og:image" content="https://blog.mattbowers.dev/images/matt_hello_world_wide.jpg" />
 <script type="application/ld+json">
-{"url":"https://blog.mattbowers.dev/","@type":"WebSite","headline":"Random Realizations","image":"https://blog.mattbowers.dev/images/matt_hello_world_wide.jpg","author":{"@type":"Person","name":"Matt Bowers"},"name":"Random Realizations","description":"A blog about data science, statistics, machine learning, and the scientific method.","@context":"https://schema.org"}</script>
+{"url":"https://blog.mattbowers.dev/","headline":"Random Realizations","@type":"WebSite","image":"https://blog.mattbowers.dev/images/matt_hello_world_wide.jpg","author":{"@type":"Person","name":"Matt Bowers"},"name":"Random Realizations","description":"A blog about data science, statistics, machine learning, and the scientific method.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://blog.mattbowers.dev/feed.xml" title="Random Realizations" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
