--- a/_pages/1-subscribe.html
+++ b/_pages/1-subscribe.html
@@ -15,7 +15,7 @@
 <meta property="og:url" content="https://blog.mattbowers.dev/_pages/1-subscribe" />
 <meta property="og:site_name" content="Random Realizations" />
 <script type="application/ld+json">
-{"url":"https://blog.mattbowers.dev/_pages/1-subscribe","@type":"WebPage","headline":"Subscribe","author":{"@type":"Person","name":"Matt Bowers"},"description":"A blog about data science, statistics, machine learning, and the scientific method.","@context":"https://schema.org"}</script>
+{"url":"https://blog.mattbowers.dev/_pages/1-subscribe","headline":"Subscribe","@type":"WebPage","author":{"@type":"Person","name":"Matt Bowers"},"description":"A blog about data science, statistics, machine learning, and the scientific method.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://blog.mattbowers.dev/feed.xml" title="Random Realizations" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
